# pyvisp

./: CMakeLists.txt  README.md
_visp/: CMakeLists.txt  VISPBoostConverter.cpp  VISPBoostConverter.h  _visp.cpp  detector.cpp  detector.h  dummyDisplayOpenCV.cpp  dummyDisplayOpenCV.h  tracker.cpp  tracker.h
python/: CMakeLists.txt  setup.py  setup.py.in
python/visp/: detector.py  tracker.py  utils.py
tests/: object_detection.py  object_tracking.py  qrcode_detection.py
